# easy_bank

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: account.py  data.py  transaction.py
app/database/: connection.py
app/models/: account.py  transaction.py
app/schema/: account.sql  transaction.sql
app/src/: account.py  data.py  transaction.py
tests/: conftest.py  init.sql
tests/test_database/: test_connection.py
tests/test_src/: test_account.py  test_data.py  test_transaction.py
